# rxxlib

./: .gitignore  Cargo.toml  README.MD
builder/src/: lib.rs
examples/data/: main.rs
examples/objmanager/: main.rs
src/: data.rs  data_read.rs  lib.rs  manager.rs  types.rs
tests/: test.rs  test_enum.rs  test_eumn.rs  test_objmanager_base_type.rs  test_objmanager_sharedptr.rs  test_objmanager_sharedptr_compatible.rs  test_objmanager_struct.rs  test_xxlib_builder.rs
tests/test_gen/: mod.rs  ref_class.rs  test.rs
tests/test_model/: master.rs  mod.rs
