[package]
name = "xxlib"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes="1.0"
paste="1.0"
anyhow = "1.0"
sharedptr = {path="../shared_ptr"}
lazy_static = "1.4"

[features]
default=[]
BigEndian = []