[package]
name = "xxlib"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste="1.0"
anyhow = "1.0"
sharedptr = {path="../shared_ptr"}
impl-trait-for-tuples = "0.2"

[dev-dependencies]
xxlib_builder={path="./builder"}

[features]
default=[]
BigEndian = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level=3