[package]
name = "xxlib"
version = "0.3.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"
repository = "https://github.com/luyikk/rxxlib"
documentation = "https://docs.rs/xxlib"
description = "Rust xxlib."
license = "MIT/Apache-2.0"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste="1.0"
anyhow = "1.0"
sharedptr = "0.3.1"
impl-trait-for-tuples = "0.2"
ordnung = "0.0.1"
data-rw="1.6"

[dev-dependencies]
xxlib_builder="0.2"

[features]
default=[]
BigEndian = []
Arc=[]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level=3